[package]
name = "rustzx-esp32"
version = "0.20.0"
authors = ["georgik"]
edition = "2018"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "idf", "esp-idf", "esp32", "zx"]
description = "Emulation of Spectrum ZX on ESP32"
repository = "https://github.com/georgik/rustzx-esp32"
license = "MIT OR Apache-2.0"
readme = "README.md"

[patch.crates-io]
esp-idf-hal = { path = "../esp-idf-hal" }

[profile.dev]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

[profile.release]
opt-level = "s"

[features]
# Enable this feature for the build to use ESP-IDF native tooling instead of PlatformIO under the hood
native = ["esp-idf-sys/native"]

# Enable this feature if you are building for QEMU
qemu = []

# Enable this feature in case you have a Kaluga ILI9341 board and would like to see a LED screen demo
kaluga_ili9341 = []

# Enable this feature in case you have a Kaluga ST7789 board and would like to see a LED screen demo
kaluga_st7789 = []

# Enable this feature in case you have a TTGO board and would like to see a LED screen demo
ttgo = []

# Enable this feature in case you have an ESP32S3-USB-OTG board and would like to see a LED screen demo
heltec = []

esp32s3_usb_otg = []

[dependencies]
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
esp-idf-sys = { version = "0.24", features = ["binstart"] }
esp-idf-svc = "0.28"
esp-idf-hal = "0.23"
embedded-svc = "0.12"
embedded-hal = "0.2"
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
st7789 = "0.6"
ili9341 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
ssd1306 = "0.7"
rustzx-utils = { version = "0.15", features = ["std"] }
rustzx-core = { version = "0.15", features = ["embedded-roms"] }

[build-dependencies]
embuild = "0.25"
anyhow = "1"
