[package]
name = "rustzx-esp32-c6"
version = "2.0.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
hal = { package = "esp32c6-hal", version = "0.7.0" , features = ["embassy", "async", "embassy-time-timg0", "rt", "embassy-executor-thread"] }
esp-backtrace = { version = "0.9.0", features = [
    "esp32c6",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", features = ["esp32c6", "log"] }

critical-section = { version = "1.1.2" }
display-interface = "0.4"
esp-alloc = "0.3.0"
embassy-sync = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }
embedded-io-async  = "0.6.1"
embassy-net = { version = "0.2.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-executor = { version = "0.4.0", package = "embassy-executor", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.2.0" }
embedded-graphics = "0.8.0"
embedded-hal = "0.2"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
icm42670 = { git = "https://github.com/jessebraham/icm42670/" }
log = "0.4"
mipidsi = "0.7.1"
#panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
spooky-core = { git = "https://github.com/georgik/esp32-spooky-maze-game.git", rev = "fb5f755", default-features = false, features = ["static_maze"]}
spooky-embedded = { git = "https://github.com/georgik/esp32-spooky-maze-game.git", rev = "fb5f755", default-features = false, features = [ "esp32c6", "static_maze", "resolution_320x240" ] }
spi-dma-displayinterface = { git = "https://github.com/georgik/esp32-spooky-maze-game.git", rev = "fb5f755", features = ["esp32c6"] }
display-interface-spi = "0.4"
#rustzx-utils = { version = "0.16.0" }
#rustzx-core = { version = "0.16.0", features = ["embedded-roms"] }
#rustzx-utils = { path = "../../rustzx/rustzx-utils" }
#rustzx-core = { path = "../../rustzx/rustzx-core" , features = ["embedded-roms"] }
rustzx-utils = { git = "https://github.com/georgik/rustzx.git", branch = "feature/performance-bounding-box" }
rustzx-core = {  git = "https://github.com/georgik/rustzx.git", branch = "feature/performance-bounding-box", features = ["embedded-roms"] }
# pc-keyboard = "0.7.0"
esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", rev = "a69545d", features = [ "esp32c6", "esp-now", "async", "phy-enable-usb" ] }
usb-zx = { path = "../usb-zx" }
static_cell = { version = "2.0.0", features = ["nightly"] }
esp-bsp-rs = { path = "../esp-bsp-rs" }
graphics = { path = "../graphics" }

[patch.crates-io]
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-net", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-time", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}
embassy-executor-macros = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor-macros", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-sync", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d", features = ["mutex"]}
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", package = "embassy-futures", rev = "14f41a71b6ea9dedb4ee5b9c741fe10575772c7d"}
