[package]
name = "rustzx-esp32-s3-box"
version = "2.0.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32s3-none-elf.dependencies]
hal = { package = "esp32s3-hal", version = "0.15.0", features = ["embassy", "async", "embassy-time-timg0", "rt", "embassy-executor-thread", "opsram-8m"] }
esp-backtrace = { version = "0.10.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.8.0", features = ["esp32s3", "log"] }

[dependencies]
critical-section = { version = "1.1.2" }
display-interface = "0.4"
esp-alloc = "0.3.0"
embassy-sync = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }
embassy-executor = { version = "0.5.0", package = "embassy-executor", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.3.0" }
embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
icm42670 = { git = "https://github.com/jessebraham/icm42670/" }
log = "0.4"
mipidsi = "0.7.1"
#panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
#spooky-core = { git = "https://github.com/georgik/esp32-spooky-maze-game.git", rev = "fb5f755", default-features = false, features = ["static_maze"]}
#spooky-embedded = { git = "https://github.com/georgik/esp32-spooky-maze-game.git", rev = "fb5f755", default-features = false, features = [ "esp32s3", "static_maze", "resolution_320x240" ] }
esp-display-interface-spi-dma = { git = "https://github.com/georgik/esp-display-interface-spi-dma.git", features = ["esp32s3"] }
#rustzx-utils = { version = "0.16.0" }
#rustzx-core = { version = "0.16.0", features = ["embedded-roms"] }
#rustzx-utils = { path = "../../rustzx/rustzx-utils" }
#rustzx-core = { path = "../../rustzx/rustzx-core" , features = ["embedded-roms"] }
rustzx-utils = { git = "https://github.com/georgik/rustzx.git", branch = "feature/performance-bounding-box" }
rustzx-core = {  git = "https://github.com/georgik/rustzx.git", branch = "feature/performance-bounding-box", features = ["embedded-roms"] }
esp-wifi  = { version = "0.3.0", features = [ "wifi", "utils", "tcp", "smoltcp", "dhcpv4"] }

usb-zx = { path = "../usb-zx" }
static_cell = { version = "2.0.0", features = ["nightly"] }
#esp-bsp = { version = "0.1.0" }
esp-bsp = { git = "https://github.com/georgik/esp-bsp-rs", branch = "feature/display_interface_spi_dma" }
graphics = { path = "../graphics" }
keyboard-pipe = { path = "../keyboard-pipe" }
uart-keyboard = { path = "../uart-keyboard", features = [ "esp32s3" ] }
esp-now-keyboard = { path = "../esp-now-keyboard", features = [ "esp32s3" ] }
emulator = { path = "../emulator", features = [ "esp32_s3_box" ] }
