[package]
name = "rustzx-esp32-c3-devkit-rust"
version = "0.3.0"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.riscv32imac-unknown-none-elf.dependencies]
hal = { package = "esp32s3-hal", version = "0.13.0" }
esp-backtrace = { version = "0.9.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.7.0", default-features = false, features = [ "esp32s3", "log" ] }

[dependencies]
critical-section = { version = "1.1.2" }
display-interface = "0.4"
esp-alloc = "0.3.0"
embedded-graphics = "0.8.0"
embedded-hal = "0.2"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
icm42670 = { git = "https://github.com/jessebraham/icm42670/" }
log = "0.4"
mipidsi = "0.7.1"
panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
spooky-core = { git = "https://github.com/georgik/esp32-spooky-maze-game.git", rev = "ad47396", default-features = false, features = ["static_maze"]}
spooky-embedded = { git = "https://github.com/georgik/esp32-spooky-maze-game.git", rev = "ad47396", default-features = false, features = [ "esp32s3", "static_maze", "resolution_320x240" ] }
spi-dma-displayinterface = { git = "https://github.com/georgik/esp32-spooky-maze-game.git", rev = "ad47396", features = ["esp32s3"] }
rustzx-utils = { version = "0.16.0" }
rustzx-core = { version = "0.16.0", features = ["embedded-roms"] }
