[package]
name = "rustzx-m5stack-cores3"
version = "2.0.1"
authors = ["Juraj Michálek <juraj.michalek@gmail.com>"]
edition = "2021"
license = "MIT"

[target.xtensa-esp32s3-none-elf.dependencies]
hal = { package = "esp32s3-hal", version = "0.15.0", features = ["embassy", "async", "embassy-time-timg0", "rt", "embassy-executor-thread", "psram-8m"] }
esp-backtrace = { version = "0.10.0", features = [
    "esp32s3",
    "panic-handler",
    "print-uart",
] }
esp-println = { version = "0.8.0", features = ["esp32s3", "log"] }

[dependencies]
# critical-section = { version = "1.1.2" }
display-interface = "0.4"
esp-alloc = "0.3.0"

embassy-sync = { version = "0.5.0" }
embassy-futures = { version = "0.1.0" }
embassy-executor = { version = "0.5.0", package = "embassy-executor", features = ["nightly", "integrated-timers"] }
embassy-time = { version = "0.3.0" }

embedded-graphics = "0.8.0"
embedded-hal = "1.0.0"
embedded-graphics-framebuf = { version = "0.3.0", git = "https://github.com/georgik/embedded-graphics-framebuf.git", branch = "feature/embedded-graphics-0.8" }
log = "0.4"
mipidsi = "0.7.1"
#panic-halt = "0.2"
shared-bus = { version = "0.3.0" }
esp-display-interface-spi-dma = { version = "0.1.0", features = ["esp32s3"] }
#rustzx-utils = { version = "0.16.0" }
#rustzx-core = { version = "0.16.0", features = ["embedded-roms"] }
#rustzx-utils = { path = "../../rustzx/rustzx-utils" }
#rustzx-core = { path = "../../rustzx/rustzx-core" , features = ["embedded-roms"] }
rustzx-utils = { git = "https://github.com/georgik/rustzx.git", branch = "feature/performance-bounding-box" }
rustzx-core = {  git = "https://github.com/georgik/rustzx.git", branch = "feature/performance-bounding-box", features = ["embedded-roms"] }
axp2101 = { git = "https://github.com/georgik/axp2101-rs.git", rev = "60db0e1" }
aw9523 = { git = "https://github.com/georgik/aw9523-rs.git", rev = "af49728" }
esp-wifi  = { version = "0.3.0", features = [ "wifi", "utils", "tcp", "smoltcp", "dhcpv4", "phy-enable-usb"] }

usb-zx = { path = "../usb-zx" }
static_cell = { version = "2.0.0", features = ["nightly"] }
esp-bsp = { git = "https://github.com/georgik/esp-bsp-rs", branch = "feature/display_interface_spi_dma" }
graphics = { path = "../graphics" }
keyboard-pipe = { path = "../keyboard-pipe" }
uart-keyboard = { path = "../uart-keyboard", features = [ "esp32s3" ] }
esp-now-keyboard = { path = "../esp-now-keyboard", features = [ "esp32s3" ] }
emulator = { path = "../emulator", features = [ "m5stack_cores3" ] }
